--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ tokio = { version = "1.17", default-features = false, features = [ "macros", "rt
 tokio-stream = { version = "0.1", default-features = false }
 toml = { version = "0.5", default-features = false }
 uuid = { version = "1.0", default-features = false, features = ["v4"] }
+zstd = { version = "0.11.1", default-features = false }
 
 [dev-dependencies]
 bee-test = { git = "https://github.com/iotaledger/bee", branch = "shimmer-develop", version  = "0.1.0", default-features = false }
