--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ tokio-stream = { version = "0.1", default-features = false }
 toml = { version = "0.5", default-features = false }
 tonic = { version = "0.7", default-features = false }
 uuid = { version = "1.0", default-features = false, features = ["v4"] }
+url = { version = "2.2", default-features = false }
 
 # API
 axum = { version = "0.5", default-features = false, features = ["http1", "json", "query"], optional = true }
