Better error handling and reporting

--- a/docker/docker-compose.hornet.yml
+++ b/docker/docker-compose.hornet.yml
@@ -13,6 +13,7 @@ services:
     image: inx-chronicle:dev
     environment:
       - RUST_LOG=warn,inx_chronicle=debug
+    tty: true
     command:
       - "--inx"
       - "http://hornet:9029"
