--- a/docker/docker-compose.hornet.yml
+++ b/docker/docker-compose.hornet.yml
@@ -11,6 +11,7 @@ services:
       context: ..
       dockerfile: docker/Dockerfile
     image: inx-chronicle:dev
+    # Remove this entry if you don't want to directly expose the API.
     ports:
       - "9092:9092/tcp"
     environment:
@@ -32,7 +33,7 @@ services:
     ports:
       - "15600:15600/tcp"
       - "14626:14626/udp"
-      - "14265:14265/tcp"
+      - "14265:14265/tcp" # REST API
       - "8081:8081/tcp"
       - "8091:8091/tcp"
       - "9311:9311/tcp"
@@ -40,6 +41,7 @@ services:
       - ALL
     volumes:
       - ./alphanet:/app/alphanet
+      - ./config.hornet.json:/app/config.json:ro
     command:
       - "-c"
       - "config.json"
