Deploy using Docker (#74)
* Deploy using Docker

* Better Dockerfile

* Improved connection and error handling

* Fix Docker CI

* Silence `mongo`

* Trying

* Fix compilation

* Remove image test

* Better handling of INX connection errors

* Version

* Better error handling and reporting

* Expose API

* Expose port in `docker-compose.yml`

* Expose API through Docker

* Fmt and Clippy

* I don't know the alphabet

* Bump `bee-message`

* Address some comments

* Compile again

* Format

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 ############################
 # Build
 ############################
-FROM rust:1-buster as build
+FROM lukemathwalker/cargo-chef:latest-rust-buster AS chef
 
 LABEL org.label-schema.description="IOTA permanode implemented as an IOTA Node Extension (INX)."
 LABEL org.label-schema.name="iotaledger/inx-chronicle"
@@ -9,21 +9,30 @@ LABEL org.label-schema.schema-version="1.0"
 LABEL org.label-schema.vcs-url="https://github.com/iotaledger/inx-chronicle"
 LABEL org.label-schema.usage="https://github.com/iotaledger/inx-chronicle/blob/main/README.md"
 
-RUN apt-get update && apt-get install -y protobuf-compiler
-
 WORKDIR /inx-chronicle
-COPY . .
 
-RUN cargo build --release
+FROM chef as planner
+COPY . .
+RUN cargo chef prepare --recipe-path recipe.json
+
+FROM chef as builder
+RUN apt-get update && apt-get install -y protobuf-compiler
+COPY --from=planner /inx-chronicle/recipe.json recipe.json
+
+RUN cargo chef cook --release --recipe-path recipe.json
+COPY . .
+RUN cargo build --release --bin inx-chronicle
 
 ############################
 # Image
 ############################
 # https://console.cloud.google.com/gcr/images/distroless/global/cc-debian11
 # using distroless cc "nonroot" image, which includes everything in the base image (glibc, libssl and openssl)
-FROM gcr.io/distroless/cc-debian11:nonroot
+FROM gcr.io/distroless/cc-debian11:nonroot AS runtime
 
-COPY --chown=nonroot:nonroot --from=build /inx-chronicle/target/release/inx-chronicle /app/inx-chronicle
+EXPOSE 9092/tcp
+
+COPY --chown=nonroot:nonroot --from=builder /inx-chronicle/target/release/inx-chronicle /app/inx-chronicle
 
 WORKDIR /app
 USER nonroot
