--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chronicle"
-version = "0.1.0"
+version = "0.0.1-alpha.1"
 authors = ["IOTA Stiftung"]
 edition = "2021"
 description = "IOTA permanode implemented as an IOTA Node Extension (INX)."
@@ -40,6 +40,7 @@ tokio = { version = "1.17", default-features = false, features = [ "macros", "rt
 tokio-stream = { version = "0.1", default-features = false }
 toml = { version = "0.5", default-features = false }
 tonic = { version = "0.7", default-features = false }
+url = { version = "2.2", default-features = false }
 uuid = { version = "1.0", default-features = false, features = ["v4"] }
 
 # API
@@ -50,7 +51,7 @@ tower = { version = "0.4", default-features = false, optional = true }
 tower-http = { version = "0.2", default-features = false, features = ["cors", "catch-panic", "trace"], optional = true }
 
 # Stardust types
-bee-message-stardust = { package = "bee-message", version = "0.2", default-features = false, features = ["std", "serde1", "dto"], optional = true }
+bee-message-stardust = { package = "bee-message", version = "0.2", default-features = false, features = ["std", "serde", "dto"], optional = true }
 bee-rest-api-stardust = { package = "bee-rest-api", version = "0.2", default-features = false, optional = true }
 
 # Temporarily patch Stardust types until release
