Fill in more collector functionality. Add address registry to resolve circular dependencies.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,9 @@ env_logger = { version = "0.9", default-features = false, features = ["termcolor
 futures = { version = "0.3", default-features = false }
 hex = { version = "0.4", default-features = false }
 inx = { git = "https://github.com/iotaledger/inx", version = "0.2", default-features = false, features = ["types"] }
+lazy_static = { version = "1.4", default-features = false }
 log = { version = "0.4", default-features = false }
+lru = { version = "0.7", default-features = false }
 mongodb = { version = "2.2", default-features = false, features = ["tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 serde_json = { version = "1.0", default-features = false, features = ["std"] }
@@ -47,11 +49,12 @@ axum = { version = "0.5", default-features = false, features = ["http1", "json",
 hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "stream"], optional = true }
 serde_urlencoded = { version = "0.7", default-features = false, optional = true }
 tower = { version = "0.4", default-features = false, optional = true }
-tower-http = { version = "0.2", default-features = false, features = ["cors", "catch-panic", "trace"], optional = true }
+tower-http = { version = "0.3", default-features = false, features = ["cors", "catch-panic", "trace"], optional = true }
 
 # Stardust types
 bee-message-stardust = { package = "bee-message", version = "0.2", default-features = false, features = ["std", "serde", "dto"], optional = true }
 bee-rest-api-stardust = { package = "bee-rest-api", version = "0.2", default-features = false, optional = true }
+packable = { version = "0.3", default-features = false, optional = true }
 
 # Temporarily patch Stardust types until release
 [patch.crates-io]
@@ -89,4 +92,5 @@ api-node = [
 stardust = [
     "bee-message-stardust",
     "bee-rest-api-stardust",
+    "packable",
 ]
