--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,8 @@
 [alias]
-ci-build = "build --all-targets --all-features --release"
+ci-build-all = "build --all-targets --all-features --release"
+ci-build-inx = "build --all-targets --features inx --release"
+ci-build-api = "build --all-targets --features api --release"
+
 ci-clippy = "clippy --all-targets --all-features -- -D warnings"
 ci-doctest = "test --doc --all-features --release"
 ci-doc = "doc --all-features --no-deps --document-private-items"
