--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,16 +25,25 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install LLVM and Clang (Windows)
-        uses: KyleMayes/install-llvm-action@32c4866ebb71e0949e8833eb49beeebed48532bd
-        if: contains(matrix.os, 'windows')
-        with:
-          version: "11.0"
-          directory: ${{ runner.temp }}/llvm
+      - name: Install protoc (Ubuntu)
+        if: contains(matrix.os, 'ubuntu')
+        run: |
+          apt-get update -y
+          apt-get install -y protobuf-compiler
 
-      - name: Set LIBCLANG_PATH (Windows)
-        run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
+      - name: Install protoc (Ubuntu)
+        if: contains(matrix.os, 'ubuntu')
+        run: |
+          apt-get update -y
+          apt-get install protoc
+
+      - name: Install protoc (macOS)
+        if: contains(matrix.os, 'macos')
+        run: brew install protobuf
+
+      - name: Install protoc (Windows)
         if: contains(matrix.os, 'windows')
+        run: choco install protoc
 
       - name: Install Rust (stable)
         uses: actions-rs/toolchain@v1
