--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Install protoc (Ubuntu)
         if: contains(matrix.os, 'ubuntu')
         run: |
-          apt-get update -y
-          apt-get install -y protobuf-compiler
+          sudo apt-get update -y
+          sudo apt-get install -y protobuf-compiler
 
       - name: Install protoc (macOS)
         if: contains(matrix.os, 'macos')
