--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ dotenv = { version = "0.15", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3", default-features = false }
 hex = { version = "0.4", default-features = false }
+humantime-serde = { version = "1.1", default-features = false }
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.2", default-features = false, features = ["tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
