--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/iotaledger/inx-chronicle"
 license = "Apache-2.0"
 keywords = ["iota", "storage", "permanode", "chronicle", "inx"]
 homepage = "https://www.iota.org"
+rust-version = "1.60"
 
 [lib]
 name = "chronicle"
@@ -29,7 +30,7 @@ dotenv = { version = "0.15", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3", default-features = false }
 hex = { version = "0.4", default-features = false }
-inx = { git = "https://github.com/iotaledger/inx", version = "0.2", default-features = false, features = ["types"] }
+humantime-serde = { version = "1.1", default-features = false }
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.2", default-features = false, features = ["tokio-runtime"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
@@ -39,7 +40,6 @@ time = { version = "0.3", default-features = false, features = ["std"] }
 tokio = { version = "1.17", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
 tokio-stream = { version = "0.1", default-features = false }
 toml = { version = "0.5", default-features = false }
-tonic = { version = "0.7", default-features = false }
 url = { version = "2.2", default-features = false }
 uuid = { version = "1.0", default-features = false, features = ["v4"] }
 
@@ -49,6 +49,9 @@ hyper = { version = "0.14", default-features = false, features = ["server", "tcp
 serde_urlencoded = { version = "0.7", default-features = false, optional = true }
 tower = { version = "0.4", default-features = false, optional = true }
 tower-http = { version = "0.3", default-features = false, features = ["cors", "catch-panic", "trace"], optional = true }
+
+# INX
+inx = { git = "https://github.com/iotaledger/inx", version = "0.2", default-features = false, features = ["types"], optional = true }
 
 # Stardust types
 bee-message-stardust = { package = "bee-message", version = "0.2", default-features = false, features = ["std", "serde", "dto"], optional = true }
@@ -62,18 +65,19 @@ bee-rest-api-stardust = { package = "bee-rest-api", git = "https://github.com/io
 [features]
 default = [
     "api-analytics",
-    "api-explorer", 
-    "api-indexer", 
-    "api-node", 
+    "api-explorer",
+    "api-indexer",
+    "api-node",
+    "inx",
     "stardust",
 ]
 api = [ 
-    "axum",
+    "dep:axum",
     "derive_more/from",
-    "hyper",
-    "serde_urlencoded",
-    "tower",
-    "tower-http",
+    "dep:hyper",
+    "dep:serde_urlencoded",
+    "dep:tower",
+    "dep:tower-http",
 ]
 api-analytics = [
     "api",
@@ -87,7 +91,10 @@ api-indexer = [
 api-node = [
     "api",
 ]
+inx = [
+    "dep:inx",
+]
 stardust = [
-    "bee-message-stardust",
-    "bee-rest-api-stardust",
+    "dep:bee-message-stardust",
+    "dep:bee-rest-api-stardust",
 ]
