--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -1,8 +1,8 @@
 [mongodb]
-location = "mongodb://localhost:27017"
+connect_url = "mongodb://localhost:27017"
 username = "root"
 password = "root"
 
 [inx]
-address = "http://localhost:9029"
+connect_url = "http://localhost:9029"
 connection_retry_interval = "5s"
