--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,3 +91,9 @@ stardust = [
     "dep:bee-message-stardust",
     "dep:bee-rest-api-stardust",
 ]
+
+[profile.release]
+debug = true
+
+[profile.production]
+inherits = "release"
