--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ path = "bin/inx-chronicle/src/main.rs"
 # Required
 async-recursion = { version = "1.0", default-features = false }
 async-trait = { version = "0.1", default-features = false }
+bee-metrics = { git = "https://github.com/iotaledger/bee", branch = "mainnet-develop-0.4", default-features = false }
 clap = { version = "3.1", default-features = false, features = [ "derive", "std" ] }
 derive_more = { version = "0.99", default-features = false }
 dotenv = { version = "0.15", default-features = false }
@@ -70,7 +71,7 @@ default = [
     "inx",
     "stardust",
 ]
-api = [ 
+api = [
     "dep:axum",
     "derive_more/from",
     "dep:hyper",
