put metrics behind a feature gate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,6 @@ path = "bin/inx-chronicle/src/main.rs"
 # Required
 async-recursion = { version = "1.0", default-features = false }
 async-trait = { version = "0.1", default-features = false }
-bee-metrics = { git = "https://github.com/iotaledger/bee", branch = "mainnet-develop-0.4", default-features = false }
 clap = { version = "3.1", default-features = false, features = [ "derive", "std" ] }
 derive_more = { version = "0.99", default-features = false }
 dotenv = { version = "0.15", default-features = false }
@@ -55,6 +54,9 @@ tower-http = { version = "0.3", default-features = false, features = ["cors", "c
 
 # INX
 inx = { git = "https://github.com/iotaledger/inx", version = "0.3", default-features = false, features = ["types"], optional = true }
+
+# Metrics
+bee-metrics = { git = "https://github.com/iotaledger/bee", branch = "mainnet-develop-0.4", default-features = false, optional = true }
 
 # Stardust types
 bee-message-stardust = { package = "bee-message", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["std", "serde", "dto"], optional = true }
@@ -94,6 +96,9 @@ console = [
 ]
 inx = [
     "dep:inx",
+]
+metrics = [
+    "dep:bee-metrics",
 ]
 stardust = [
     "dep:bee-message-stardust",
