chore(ci): Run `clippy` on individual features

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,7 +3,10 @@ ci-build-all = "build --all-targets --all-features --release"
 ci-build-inx = "build --all-targets --features inx --release"
 ci-build-api = "build --all-targets --features api --release"
 
-ci-clippy = "clippy --all-targets --all-features -- -D warnings"
+ci-clippy-all = "clippy --all-targets --all-features -- -D warnings"
+ci-clippy-inx = "clippy --all-targets --features inx -- -D warnings"
+ci-clippy-api = "clippy --all-targets --features api -- -D warnings"
+
 ci-doctest = "test --doc --all-features --release"
 ci-doc = "doc --all-features --no-deps --document-private-items"
 ci-fmt = "fmt --all -- --check"
