feat: add `tokio-console` tracing (#115)
* Add tokio console tracing

* Remove profile

* Apply suggestions from code review

Co-authored-by: Jochen Görtler <grtlr@users.noreply.github.com>

* down with `AsRef<str>`

Co-authored-by: Jochen Görtler <grtlr@users.noreply.github.com>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -17,3 +17,7 @@ ci-udeps = "udeps --all-targets --all-features --backend=depinfo"
 fix-clippy = "clippy --all-targets --all-features --fix"
 fix-fmt = "fmt --all"
 fix-toml = "sort --grouped"
+
+# Enable Tokio's experimental tracing API.
+[build]
+rustflags = ["--cfg", "tokio_unstable"]
