--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,9 @@ inx = { git = "https://github.com/iotaledger/inx", version = "0.3", default-feat
 bee-message-stardust = { package = "bee-message", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["std", "serde", "dto"], optional = true }
 bee-rest-api-stardust = { package = "bee-rest-api", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, optional = true }
 
+# Tokio Console
+console-subscriber = { version = "0.1", default-features = false, optional = true }
+
 [features]
 default = [
     "api-analytics",
@@ -83,6 +86,10 @@ api-explorer = [
 ]
 api-node = [
     "api",
+]
+console = [
+    "dep:console-subscriber",
+    "tokio/tracing",
 ]
 inx = [
     "dep:inx",
