--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -3,13 +3,13 @@ connect_url = "mongodb://localhost:27017"
 username = "root"
 password = "root"
 
-[inx]
-connect_url = "http://localhost:9029"
-connection_retry_interval = "5s"
-
 [api]
 port = 9092
 allow_origins = ["0.0.0.0"]
+
+[collector.inx]
+connect_url = "http://localhost:9029"
+connection_retry_interval = "5s"
 
 [collector]
 solidifier_count = 10
