--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,12 +64,13 @@ console-subscriber = { version = "0.1", default-features = false, optional = tru
 
 [features]
 default = [
-    "api-analytics",
+    "analytics",
     "api-explorer",
     "api-node",
     "inx",
     "stardust",
 ]
+analytics = []
 api = [ 
     "dep:axum",
     "derive_more/from",
@@ -78,20 +79,19 @@ api = [
     "dep:tower",
     "dep:tower-http",
 ]
-api-analytics = [
-    "api",
-]
 api-explorer = [
     "api",
 ]
 api-node = [
     "api",
 ]
+collector = []
 console = [
     "dep:console-subscriber",
     "tokio/tracing",
 ]
 inx = [
+    "collector",
     "dep:inx",
 ]
 stardust = [
