--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,9 @@ tower-http = { version = "0.3", default-features = false, features = ["cors", "c
 # INX
 inx = { git = "https://github.com/iotaledger/inx", version = "0.3", default-features = false, features = ["types"], optional = true }
 
+# Metrics
+bee-metrics = { git = "https://github.com/iotaledger/bee", branch = "mainnet-develop-0.4", default-features = false, optional = true }
+
 # Stardust types
 bee-message-stardust = { package = "bee-message", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["std", "serde", "dto"], optional = true }
 bee-rest-api-stardust = { package = "bee-rest-api", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, optional = true }
@@ -70,7 +73,7 @@ default = [
     "inx",
     "stardust",
 ]
-api = [ 
+api = [
     "dep:axum",
     "derive_more/from",
     "dep:hyper",
@@ -93,6 +96,9 @@ console = [
 ]
 inx = [
     "dep:inx",
+]
+metrics = [
+    "dep:bee-metrics",
 ]
 stardust = [
     "dep:bee-message-stardust",
