fix(collector): merge the collector and inx (#141)
* Fix features

* whut to heck ????

* Clippy proper features

* Feature gate the collector as it should not be included when running only the API. Clean up some other clippy warnings.

* Move inx underneath the collector and clean up feature gates.

* Cleanup

* Fix config

* >:I

* Add a `collector` feature and rename `api-analytics`

Co-authored-by: Jochen Görtler <jochen.goertler@iota.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,13 +67,14 @@ console-subscriber = { version = "0.1", default-features = false, optional = tru
 
 [features]
 default = [
-    "api-analytics",
+    "analytics",
     "api-explorer",
     "api-node",
     "inx",
     "stardust",
 ]
-api = [
+analytics = []
+api = [ 
     "dep:axum",
     "derive_more/from",
     "dep:hyper",
@@ -81,20 +82,19 @@ api = [
     "dep:tower",
     "dep:tower-http",
 ]
-api-analytics = [
-    "api",
-]
 api-explorer = [
     "api",
 ]
 api-node = [
     "api",
 ]
+collector = []
 console = [
     "dep:console-subscriber",
     "tokio/tracing",
 ]
 inx = [
+    "collector",
     "dep:inx",
 ]
 metrics = [
