--- a/.github/workflows/_docker.yml
+++ b/.github/workflows/_docker.yml
@@ -1,14 +1,12 @@
-name: Build Docker
+name: Build Docker Image
 
 on:
-  pull_request:
-    paths:
-      - "docker/Dockerfile"
-      - "docker/docker-compose.yml"
+  workflow_call:
+    inputs: {}
 
 jobs:
   build:
-    name: Build Docker
+    name: docker-compose build 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
