--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ async-trait = { version = "0.1", default-features = false }
 clap = { version = "3.1", default-features = false, features = [ "derive", "std" ] }
 derive_more = { version = "0.99", default-features = false }
 dotenv = { version = "0.15", default-features = false }
+dyn-clone = { version = "1.0", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
