fix(dto)!: correct some structural issues with the dtos and add tests (#154)
* Add tests to verify that all dto types can be de/serialized as bson properly

* fmt

* Add Eq to dto types and compare them in tests

* Use bee-test for things that can be random

* Use bee_test rand_alias_id and rename stardust alias to bee

* Fmt :triumph:

* Add parse error to types

* Use `u64::MAX` for nonce

Co-authored-by: Jochen Görtler <jochen.goertler@iota.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,9 @@ bee-rest-api-stardust = { package = "bee-rest-api", git = "https://github.com/io
 # Tokio Console
 console-subscriber = { version = "0.1", default-features = false, optional = true }
 
+[dev-dependencies]
+bee-test = { package = "bee-test", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false }
+
 [features]
 default = [
     "analytics",
