--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,7 +1,7 @@
 [alias]
-ci-build-all = "build --all-targets --all-features --release"
-ci-build-inx = "build --all-targets --no-default-features --features inx,stardust --release"
-ci-build-api = "build --all-targets --no-default-features --features api-node,stardust --release"
+ci-build-all = "build --all-targets --all-features"
+ci-build-inx = "build --all-targets --no-default-features --features inx,stardust"
+ci-build-api = "build --all-targets --no-default-features --features api-node,stardust"
 
 ci-clippy-all = "clippy --all-targets --all-features -- -D warnings"
 ci-clippy-inx = "clippy --all-targets --no-default-features --features inx,stardust -- -D warnings"
