Rename message to block and add new cone structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ inx = { git = "https://github.com/iotaledger/inx", version = "0.3", default-feat
 bee-metrics = { git = "https://github.com/iotaledger/bee", branch = "mainnet-develop-0.4", default-features = false, optional = true }
 
 # Stardust types
-bee-message-stardust = { package = "bee-message", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["std", "serde", "dto"], optional = true }
+bee-block-stardust = { package = "bee-message", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["std", "serde", "dto"], optional = true }
 bee-rest-api-stardust = { package = "bee-rest-api", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, optional = true }
 
 # Tokio Console
@@ -91,19 +91,17 @@ api-explorer = [
 api-node = [
     "api",
 ]
-collector = []
 console = [
     "dep:console-subscriber",
     "tokio/tracing",
 ]
 inx = [
-    "collector",
     "dep:inx",
 ]
 metrics = [
     "dep:bee-metrics",
 ]
 stardust = [
-    "dep:bee-message-stardust",
+    "dep:bee-block-stardust",
     "dep:bee-rest-api-stardust",
 ]
