--- a/docker/config.hornet.json
+++ b/docker/config.hornet.json
@@ -8,7 +8,7 @@
       "/health",
       "/api/v2/info",
       "/api/v2/tips",
-      "/api/v2/messages*",
+      "/api/v2/blocks*",
       "/api/v2/transactions*",
       "/api/v2/milestones*",
       "/api/v2/outputs*",
@@ -174,7 +174,7 @@
     "advancementRange": 150
   },
   "spammer": {
-    "message": "We are all made of stardust.",
+    "block": "We are all made of stardust.",
     "tag": "HORNET Spammer",
     "tagSemiLazy": "HORNET Spammer Semi-Lazy",
     "cpuMaxUsage": 0.8,
