feat(build): optimize production builds (#173)
* Optimize release builds

* Add production profile, and let Docker use it

* Debug build in CI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,3 +108,9 @@ stardust = [
     "dep:bee-message-stardust",
     "dep:bee-rest-api-stardust",
 ]
+
+[profile.production]
+inherits = "release"
+codegen-units = 1
+lto = true
+strip = "symbols"
