--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,20 +13,10 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-and-test-1:
+  build-and-test:
     name: "build and test"
     uses: ./.github/workflows/_build.yml
     with: { os: ubuntu-latest, rust: stable }
-  
-  build-and-test-2:
-    name: "build and test"
-    uses: ./.github/workflows/_build.yml
-    with: { os: windows-latest, rust: stable }
-
-  build-and-test-3:
-    name: "build and test"
-    uses: ./.github/workflows/_build.yml
-    with: { os: macos-latest, rust: stable }
 
   format:
     uses: ./.github/workflows/_fmt.yml
