--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ path = "bin/inx-chronicle/src/main.rs"
 async-recursion = { version = "1.0", default-features = false }
 async-trait = { version = "0.1", default-features = false }
 clap = { version = "3.1", default-features = false, features = [ "derive", "std" ] }
-derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref" ] }
+derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign" ] }
 dotenv = { version = "0.15", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3", default-features = false }
