feat(metrics): add channel metrics to runtime (#169)
* Add channel metrics to runtime

* No need to send messages to the metrics worker

* Fix metric naming and add sender traits

* Add actor loop timings metric

* Fix deps

* Fix runtime metric names

* Remove prometheus_client dependency

* Clippy

* fmt

Co-authored-by: Jochen Görtler <grtlr@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ async-trait = { version = "0.1", default-features = false }
 clap = { version = "3.1", default-features = false, features = [ "derive", "std" ] }
 derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut" ] }
 dotenv = { version = "0.15", default-features = false }
+dyn-clone = { version = "1.0", default-features = false }
 env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
 futures = { version = "0.3", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
@@ -56,7 +57,7 @@ tower-http = { version = "0.3", default-features = false, features = ["cors", "c
 inx = { git = "https://github.com/iotaledger/inx", version = "0.4", default-features = false, features = ["types"], optional = true }
 
 # Metrics
-bee-metrics = { git = "https://github.com/iotaledger/bee", branch = "mainnet-develop-0.4", default-features = false, optional = true }
+bee-metrics = { git = "https://github.com/iotaledger/bee", branch = "mainnet-develop-0.4", default-features = false, features = ["sync"], optional = true }
 
 # Stardust types
 bee-block-stardust = { package = "bee-block", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["std", "serde", "dto"], optional = true }
