--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ futures = { version = "0.3", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
 log = { version = "0.4", default-features = false }
 mongodb = { version = "2.2", default-features = false, features = ["tokio-runtime"] }
+pin-project = { version = "1.0", default-features = false }
 prefix-hex = { version = "0.4.0", default-features = false, features = [ "primitive-types" ] }
 primitive-types = { version = "0.10", default-features = false }
 serde = { version = "1.0", features = ["derive"], default-features = false }
@@ -93,13 +94,11 @@ api-explorer = [
 api-node = [
     "api",
 ]
-collector = []
 console = [
     "dep:console-subscriber",
     "tokio/tracing",
 ]
 inx = [
-    "collector",
     "dep:inx",
 ]
 metrics = [
