--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -7,12 +7,9 @@ password = "root"
 port = 8042
 allow_origins = ["0.0.0.0"]
 
-[collector.inx]
+[inx]
 connect_url = "http://localhost:9029"
 connection_retry_interval = "5s"
-
-[collector]
-solidifier_count = 10
 
 [metrics]
 address = "0.0.0.0"
