--- a/bin/inx-chronicle/config.template.toml
+++ b/bin/inx-chronicle/config.template.toml
@@ -6,6 +6,7 @@ password = "root"
 [api]
 port = 8042
 allow_origins = ["0.0.0.0"]
+password_hash = "67ae144380e29fe9a4c8dff5d90de916"
 
 [inx]
 connect_url = "http://localhost:9029"
